added auto-adding module(songs/auto_add.py) to add new songs simpler -added some new command to console and telegram added new songs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 users/users_list.dat
 users/users_list.dir
+Logo/
+songs/PHM
+telegraph/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
